--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^4.1.2",
-    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.22.0",
-    "eslint-plugin-vue": "~10.0.0",
+    "autoprefixer": "^10.4.21",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
+    "tailwindcss": "^4.1.5",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
