--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -30,5 +31,11 @@
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
+  },
+  "scripts": {
+    "generate-index": "node generate-index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
