--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "generate-index": "node generate-index.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
@@ -31,11 +32,5 @@
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
-  },
-  "scripts": {
-    "generate-index": "node generate-index.js",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
   }
 }
