--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "fslightbox": "^3.5.1",
+    "lightgallery": "^2.8.3",
+    "pdfjs-dist": "^5.2.133",
     "vue": "^3.5.13",
+    "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
